# country-flag-demo

./: .gitignore  .pre-commit-config.yaml  DeisgnDocument.md  Dockerfile  README.md  Requirements Specification.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  models.py  services.py
app/templates/: index.html
tests/: test_main.py
