[project]
name = "country-flag-viewer"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "ruff",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "pre-commit"
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers --cov=app"